MH-1719 and MH-1834 -- fixed up some logging, fixed some obvious bugs, and added lots of FIXMEs to the code so others can perhaps learn something from what FindBugs has to offer (I certainly learned a few things)
git-svn-id: https://opencast.jira.com/svn/MH/trunk@4335 e6edf6fb-f266-4316-afb4-e53d95876a76